# parallel-distributed_computing

./: README.md
big-O-notation/: CMakeLists.txt  README.md
big-O-notation/include/: big-O-loops.h
big-O-notation/src/: big-O-loops.cpp  main.cpp
big-O-notation/utils/error/: errors.h
big-O-notation/utils/timer/include/: timer.h
heat-dissipation/programs/: launcher.py
heat-dissipation/programs/mpi/: CMakeLists.txt
heat-dissipation/programs/mpi/include/: heat_mpi.h
heat-dissipation/programs/mpi/src/: heat_mpi.cpp  main.cpp
heat-dissipation/programs/openmp/: CMakeLists.txt
heat-dissipation/programs/openmp/src/: main.cpp
heat-dissipation/programs/pthread/: CMakeLists.txt
heat-dissipation/programs/pthread/include/: main.h
heat-dissipation/programs/pthread/src/: main.cpp
heat-dissipation/programs/sequential/: CMakeLists.txt
heat-dissipation/programs/sequential/src/: main.cpp
heat-dissipation/programs/utils/: x11-helpers.h
mandelbrot-set/: launcher.py
mandelbrot-set/mpi/: CMakeLists.txt
mandelbrot-set/mpi/include/: mpi_mandlebrot.h
mandelbrot-set/mpi/src/: main.cpp  mpi_mandlebrot.cpp
mandelbrot-set/pthread/: CMakeLists.txt
mandelbrot-set/pthread/src/: main.cpp
mandelbrot-set/utils/: x11-helpers.h
nbody-simulation/programs/: launcher.py  launcher_bh.py
nbody-simulation/programs/barnes-hut/: CMakeLists.txt
nbody-simulation/programs/barnes-hut/include/: barnes_hut.h
nbody-simulation/programs/barnes-hut/src/: barnes_hut.cpp  main.cpp
nbody-simulation/programs/mpi/: CMakeLists.txt
nbody-simulation/programs/mpi+openmp/: CMakeLists.txt
nbody-simulation/programs/mpi+openmp/include/: main.h  nbody_mpi+openmp.h
nbody-simulation/programs/mpi+openmp/src/: main.cpp  nbody_mpi+openmp.cpp
nbody-simulation/programs/mpi/include/: nbody_mpi.h
nbody-simulation/programs/mpi/src/: main.cpp  nbody_mpi.cpp
nbody-simulation/programs/openmp/: CMakeLists.txt
nbody-simulation/programs/openmp/src/: main.cpp
nbody-simulation/programs/pthread/: CMakeLists.txt
nbody-simulation/programs/pthread/src/: main.cpp
nbody-simulation/programs/sequential/: CMakeLists.txt
nbody-simulation/programs/sequential/src/: main.cpp
nbody-simulation/programs/utils/: body.h  x11-helpers.h
odd-even-sort/parallel/: CMakeLists.txt  launcher.py  odd_even_sort.out
odd-even-sort/parallel/include/: main.h  mpi_odd_even_sort.h  pthread_odd_even_sort.h
odd-even-sort/parallel/src/: main.cpp  mpi_odd_even_sort.cpp  pthread_odd_even_sort.cpp  runner.cpp
odd-even-sort/parallel/utils/log/src/: logs.cpp
odd-even-sort/sequential/: CMakeLists.txt
odd-even-sort/sequential/include/: odd_even_sort.h  runner.h
odd-even-sort/sequential/src/: main.cpp  odd_even_sort.cpp  runner.cpp
odd-even-sort/sequential/utils/log/include/: logs.h
